--- a/about/index.html
+++ b/about/index.html
@@ -3,10 +3,8 @@ layout: default
 title: Web Programming Page 
 --- 
  <h1>{{ page.title }}</h1> 
- <ul class="posts"> 
+ <ul class="about"> 
  
-   {% for post in site.posts %} 
-     <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ 
-post.title }}</a></li> 
-   {% endfor %} 
+  <li> about </li>
+  <li> hello </li>
  </ul> 
