--- a/about/index.html
+++ b/about/index.html
@@ -2,9 +2,8 @@
 layout: default 
 title: Web Programming Page 
 --- 
- <h1>{{ page.title }}</h1> 
+ <h1>About Page</h1> 
  <ul class="about"> 
  
-  <li> about </li>
-  <li> hello </li>
+  <li> This website is to track my progress in web programming </li>
  </ul> 
