--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Web Programming Page 
 --- 
  <h1>About Page</h1> 
- <ul class="about"> 
+ <ul class="posts"> 
  
   <li> This website is to track my progress in web programming </li>
  </ul> 
